# christats

./: .gitignore  README.md  main.py  pyproject.toml  scratch_notebook.ipynb
notebooks/rethinking/: README.md  chap2.ipynb  chap3.ipynb  chap5.ipynb  chatp4.ipynb  util.py
notebooks/rethinking/ejercicios-personales/: pymc_corr.ipynb  simulación_AB_DQ.ipynb
