[project]
name = "christats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bambi>=0.16.0",
    "blackjax>=1.3",
    "ipywidgets>=8.1.8",
    "networkx>=3.6",
    "nutpie>=0.16.4",
    "pandas>=2.3.3",
    "preliz>=0.23.0",
    "rpy2>=3.6.4",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
]
